--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -44,10 +44,15 @@
                         Nishan Niriella
                     </h1>
                     <div class="subheading mb-5">
-                        Malabe · Colombo, Sri Lanka · (+94)76 967 5216 ·
+                        Malabe · Colombo, Sri Lanka ·
                         <a href="mailto:niriellanishan@gmail.com">niriellanishan@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5" align="justify">
+                        Currently I am following my Information Technlogy degree program that is specialized in Software Engineering. 
+                        Furthermore, I have completed 6 months Software Engineer internship at Lanka Government Information Infrastructure which is a sub company of ICTA Sri Lanka and gained the experience of how to engage in the industry.
+                        I am always attempting to be the best and I assure the quality of work that I am doing. 
+                        I am looking forward for novel career opportunities since I would like to be challenged in order to improve my skills further.
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -63,7 +68,7 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Industry Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer - Intern</h3>
@@ -81,6 +86,12 @@
             <hr class="m-0" />
 
 
+            <!-- Projects-->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                </div>
+            </section>
 
             <!-- Education-->
             <section class="resume-section" id="education">
