Projects_section_updated

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
                         I am looking forward for novel career opportunities since I would like to be challenged in order to improve my skills further.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/nishan-niriella/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/NishanNiriella"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/nishan.niriella"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -90,6 +89,78 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
+                    <div class="justify-content-between mb-5">
+                        <div class="mb-5">
+                            <h3 class="mb-0">Family Tree - Mobile Application (2022)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> Android Development with Flutter, Firebase as the Database</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Android Studio</div>
+                            <div>Family Tree Mobile Application will records all the members of your family and draws a tree structure. Additionally it will manage family related events, family history etc.</div>
+                            <div>This project was done as 4-member group for the Current Trends in Software Engineering module of 4<sup>th</sup> year 1<sup>st</sup> semester.</div>
+                        </div>
+                        <div class="mb-5">
+                            <h3 class="mb-0">Ticketing System for Public Transport Network (2021)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> HTML, CSS, JavaScript, Laravel PHP Framework, Android Development with Flutter, phpMyAdmin as the Database Server</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Microsoft Visual Code, Android Studio</div>
+                            <div>This system will provide the reservation of tickets for Public Transportation Service with cost calculations per trip distance, user registration etc. Furthermore, this system includes a web application for the admin functionalities and Mobile application for the client functionalities.</div>
+                            <div>This project was done as 4-member group to complete Case Studies in Software Engineering module in 3<sup>rd</sup> year 2<sup>nd</sup> semester.</div>
+                        </div>
+                        <div class="mb-5">
+                            <h3 class="mb-0">Flex The Gym Tool (2021)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> JavaScript, Laravel PHP Framework, phpMyAdmin as the Database Server</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Microsoft Visual Code</div>
+                            <div>Flex Gym Tool will manage all the operations related to a gymnasium including membership management, gym tools management etc.</div>
+                            <div>This project was done as 4-member group for the Software Project Management module of 3<sup>rd</sup> year 2<sup>nd</sup> semester.</div>
+                        </div>
+                        <div class="mb-5">
+                            <h3 class="mb-0">BOC Smart Passbook - Re-design (2021)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> Android Programming with Flutter, Firebase as the Database</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Android Studio</div>
+                            <div>This project was done as 4-member group for the User Experience Engineering module of 3<sup>rd</sup> year 2<sup>nd</sup> semester. The main intension of this project was to increase the overall User Experience of the existing BOC Online Banking Mobile Application</div>
+                        </div>
+                        <div class="mb-5">
+                            <h3 class="mb-0">Flex Conference Management Tool (2021)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> Mongo DB, Express, React, Node JS (MERN Stack)</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Microsoft Visual Code, Web Storm</div>
+                            <div>Flex Conference Management Tool will handles the operations related to the Research Conferences. i.e. Research Paper Submission, Evaluations etc.</div>
+                            <div>This project was done as 4-member group for the Application Frameworks module of 3<sup>rd</sup> year 1<sup>st</sup> semester.</div>
+                        </div>
+                        <div class="mb-5">
+                            <h3 class="mb-0">Auto Parts Management System (2020)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> HTML, CSS, JavaScript, Laravel PHP Framework, phpMyAdmin as the Database Server</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Microsoft Visual Code, XAMPP</div>
+                            <div>This project was done as 8-member group for the ITP module of the 2<sup>nd</sup> year 2<sup>nd</sup> semester for a leading Auto Parts Company of Sri Lanka to handle their all-business operations.</div>
+                        </div>
+                        <div class="mb-5">
+                            <h3 class="mb-0">My Wedding - Mobile Application (2020)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> Android programming with Java, SQLite</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Android Studio</div>
+                            <div>My Wedding Mobile Application will help you to record all the details regarding your wedding function such as Guest Details, Budget Details etc.</div>
+                            <div>This was a mini project under the Mobile Application Development module of the 2<sup>nd</sup> year 2<sup>nd</sup> semester. The project was done as 4-member group under the topic of Wedding Planning.</div>
+                        </div>
+
+                        <div class="mb-5">
+                            <h3 class="mb-0">B Fit - Android Application Prototype (2020)</h3>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Adobe XD, Adobe Photoshop</div>
+                            <div>Dream Wanderer will promotes Sri Lankan most sceneric locations and provides the costs for the travelling.</div>
+                            <div class="mb-0">This project was done as 4-member group to participate SLIIT Code Fest 2020 for the Designathon initial round under the topic of uplifting the health condition of people during the quarantine period.</div>
+                        </div>
+
+                        <div class="mb-5">
+                            <h3 class="mb-0">Launder Land (2020)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> HTML, CSS, JSP, phpMyAdmin as the Database Server</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Microsoft Visual Code</div>
+                            <div>Launder Land Web application will work as a Online Laundary Management System which provides users to perform Laundary related tasks.</div>
+                            <div class="mb-0">This project was done as 4-member group for the Object-Oriented Programming module in 2<sup>nd</sup> year 2<sup>nd</sup> semester.</div>
+                        </div>
+
+                        <div class="mb-5">
+                            <h3 class="mb-0">Dream Wanderer (2019)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> HTML, CSS, JavaScript, phpMyAdmin as the Database Server</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Notepad++, Microsoft Visual Code</div>
+                            <div>Dream Wanderer will promotes Sri Lankan most sceneric locations and provides the costs for the travelling.</div>
+                            <div class="mb-0">This project was done as 5-member group to complete Internet and Web Technologies module in 1<sup>st</sup> year 2<sup>nd</sup> semester under the topic of Travel Bill Tracking System.</div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -231,20 +302,30 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p align="justify">Apart from being a web developer, I enjoy most of my time being studying new technologies. Additionally I am maintaining a YouTube Channel under Gaming Category and currently I have reached 2000 subscriber milestone. Being a YouTube Content Creator, I have got the exposure to Adobe Premiere Pro, After Effects and Photoshop.</p>
+                    <p align="justify" class="mb-0">Also I am interested in auto mobile since my childhood. At last but not the least, I am well suited with the computer hardware and capable of troubleshooting the day to-day hardware issues of the computers. Furthermore, I had the hands-on experience of handling and configuring the network devices such as Access Points, Routers etc from my internship at LGII.</p>
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Creating Multi Task Models with Keras - Coursera
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Basic Image Classification with TensorFlow - Coursera
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Dean's List Achievement 2<sup>nd</sup> year 2<sup>nd</sup> semester
@@ -260,18 +341,6 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Dean's List Achievement 1<sup>st</sup> year 1<sup>st</sup> semester
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Creating Multi Task Models with Keras - Coursera
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Basic Image Classification with TensorFlow - Coursera
                         </li>
                     </ul>
                 </div>
