--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizations">Oraganizations</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
@@ -62,8 +63,6 @@
             </section>
             <hr class="m-0" />
             
-
-
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -83,7 +82,6 @@
                 </div>
             </section>
             <hr class="m-0" />
-
 
             <!-- Projects-->
             <section class="resume-section" id="projects">
@@ -116,6 +114,13 @@
                             <div class="subheading mb-3"><b>Technologies Used:</b> Android Programming with Flutter, Firebase as the Database</div>
                             <div class="subheading mb-3"><b>Development Tools:</b> Android Studio</div>
                             <div>This project was done as 4-member group for the User Experience Engineering module of 3<sup>rd</sup> year 2<sup>nd</sup> semester. The main intension of this project was to increase the overall User Experience of the existing BOC Online Banking Mobile Application</div>
+                        </div>
+                        <div class="mb-5">
+                            <h3 class="mb-0">Shopping Platform (2021)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> Mongo DB, Express, React, Node JS (MERN Stack), Material UI</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Microsoft Visual Code, Web Storm</div>
+                            <div>Shopping Cart</div>
+                            <div>This project was done as 4-member group for the Destributed Systems module of 3<sup>rd</sup> year 1<sup>st</sup> semester.</div>
                         </div>
                         <div class="mb-5">
                             <h3 class="mb-0">Flex Conference Management Tool (2021)</h3>
@@ -173,7 +178,7 @@
                             <h3 class="mb-0">Sri Lanka Institute of Information Technology</h3>
                             <div class="subheading mb-3">Bachelor of Science (BSc)</div>
                             <div>Information Technology - Specialized in Software Engineering</div>
-                            <p><b>GPA:</b> 3.77</p>
+                            <p><b>GPA:</b> 3.75</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020 - Present</span></div>
                     </div>
@@ -263,10 +268,37 @@
             </section>
             <hr class="m-0" />
 
-
+            <!-- Organizations-->
+            <section class="resume-section" id="organizations">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Organizations</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">SLIIT Gaming Community</h3>
+                            <div class="subheading mb-3">Secretary</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Old Boys Association of D.S.Senanayake College - Colombo 07</h3>
+                            <div class="subheading mb-3">Member</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2019 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Prefect's Guild of Presidents' College Kotte</h3>
+                            <div class="subheading mb-3">Member</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2014 - 2016</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
             
             <!-- Skills-->
-            <section class="resume-section" id="skills">
+            <!-- <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
@@ -301,7 +333,7 @@
                     </ul>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" /> -->
 
             <!-- Interests-->
             <section class="resume-section" id="interests">
@@ -320,14 +352,6 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Creating Multi Task Models with Keras - Coursera
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Basic Image Classification with TensorFlow - Coursera
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Dean's List Achievement 2<sup>nd</sup> year 2<sup>nd</sup> semester
                         </li>
                         <li>
@@ -341,6 +365,14 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Dean's List Achievement 1<sup>st</sup> year 1<sup>st</sup> semester
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                Creating Multi Task Models with Keras - Coursera
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                Basic Image Classification with TensorFlow - Coursera
+                            </li>
                         </li>
                     </ul>
                 </div>
