--- a/index.html
+++ b/index.html
@@ -82,12 +82,37 @@
                 </div>
             </section>
             <hr class="m-0" />
+            
+            <!-- Publications-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Publications</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Smart Intelligent Pineapple Farming Assistant Agent (SIPFAA)</h3>
+                            <div class="subheading mb-3">IEEE Xplore</div>
+                            <ul>
+                                <li><a href="https://ieeexplore.ieee.org/document/10025103" target="_blank" style="text-decoration: none;">Read complete paper here.</a></li> 
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">31<sup>st</sup> January 2023</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
 
             <!-- Projects-->
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <div class="justify-content-between mb-5">
+                        <div class="mb-5">
+                            <h3 class="mb-0">Smart Intelligent Pineapple Farming Assitant Agent (SIPFAA) - Mobile Application (2022)</h3>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> Android Development with Flutter, Firebase as the Database</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Android Studio</div>
+                            <div>Family Tree Mobile Application will records all the members of your family and draws a tree structure. Additionally it will manage family related events, family history etc.</div>
+                            <div>This project was done as 4-member group for the Current Trends in Software Engineering module of 4<sup>th</sup> year 1<sup>st</sup> semester.</div>
+                        </div>
                         <div class="mb-5">
                             <h3 class="mb-0">Family Tree - Mobile Application (2022)</h3>
                             <div class="subheading mb-3"><b>Technologies Used:</b> Android Development with Flutter, Firebase as the Database</div>
