--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Nishan Niriella</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile2.jpg" alt="..." /></span>
@@ -28,6 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizations">Oraganizations</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li> -->
@@ -83,24 +84,6 @@
             </section>
             <hr class="m-0" />
             
-            <!-- Publications-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Publications</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Smart Intelligent Pineapple Farming Assistant Agent (SIPFAA)</h3>
-                            <div class="subheading mb-3">IEEE Xplore</div>
-                            <ul>
-                                <li><a href="https://ieeexplore.ieee.org/document/10025103" target="_blank" style="text-decoration: none;">Read complete paper here.</a></li> 
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">31<sup>st</sup> January 2023</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-
             <!-- Projects-->
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
@@ -108,10 +91,10 @@
                     <div class="justify-content-between mb-5">
                         <div class="mb-5">
                             <h3 class="mb-0">Smart Intelligent Pineapple Farming Assitant Agent (SIPFAA) - Mobile Application (2022)</h3>
-                            <div class="subheading mb-3"><b>Technologies Used:</b> Android Development with Flutter, Firebase as the Database</div>
-                            <div class="subheading mb-3"><b>Development Tools:</b> Android Studio</div>
-                            <div>Family Tree Mobile Application will records all the members of your family and draws a tree structure. Additionally it will manage family related events, family history etc.</div>
-                            <div>This project was done as 4-member group for the Current Trends in Software Engineering module of 4<sup>th</sup> year 1<sup>st</sup> semester.</div>
+                            <div class="subheading mb-3"><b>Technologies Used:</b> Android Development with Flutter, Pyhton, TensorFlow, Keras, Google Cloud Platform</div>
+                            <div class="subheading mb-3"><b>Development Tools:</b> Android Studio, PyCharm, Jupyter Notebook</div>
+                            <div>SIPFAA is a mobile application which assists pineapple farmers to have a healthy and profitable yield. This application falls under the category of Machine Learning and Soft Computing including AI.</div>
+                            <div>This project was done as the research project of the 4<sup>th</sup> year. Plant Disease Identification section was done using image processing.</div>
                         </div>
                         <div class="mb-5">
                             <h3 class="mb-0">Family Tree - Mobile Application (2022)</h3>
@@ -194,6 +177,24 @@
                 </div>
             </section>
 
+            <!-- Publications-->
+            <section class="resume-section" id="publications">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Publications</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Smart Intelligent Pineapple Farming Assistant Agent (SIPFAA)</h3>
+                            <div class="subheading mb-3">IEEE Xplore</div>
+                            <ul>
+                                <li><a href="https://ieeexplore.ieee.org/document/10025103" target="_blank" style="text-decoration: none;">Read complete paper here.</a></li> 
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">31<sup>st</sup> January 2023</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
@@ -203,7 +204,7 @@
                             <h3 class="mb-0">Sri Lanka Institute of Information Technology</h3>
                             <div class="subheading mb-3">Bachelor of Science (BSc)</div>
                             <div>Information Technology - Specialized in Software Engineering</div>
-                            <p><b>GPA:</b> 3.75</p>
+                            <p><b>CGPA:</b> 3.78</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020 - Present</span></div>
                     </div>
@@ -302,7 +303,7 @@
                             <h3 class="mb-0">SLIIT Gaming Community</h3>
                             <div class="subheading mb-3">Secretary</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021 - 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
